# tcode

./: .gitignore  CMakeLists.txt  README.md  checker.py  plot.py
.github/workflows/: CI.yaml
src/: allocator.hh  benchmark.cc  bin.hh  gen.cc  item.hh  main.cc
src/allocators/: ff.cc  ffdBin.cc  ffdItem.cc
src/generators/: randomGen.cc  randomSplit.cc  simpleGen.cc  specialGen.cc
src/headers/allocators/: abstractAlloc.hh  allocators.hh  ff.hh  ffdBin.hh  ffdItem.hh
src/headers/generators/: abstractGen.hh  generators.hh  randomGen.hh  randomSplit.hh  simpleGen.hh  specialGen.hh
src/include/: bin.hh  debugger.hh  item.hh  readerwriter.hh
src/include/allocators/: abstractAlloc.hh  allocators.hh  ff.hh  ffdBin.hh  ffdItem.hh
src/include/generators/: abstractGen.hh  generators.hh  randomGen.hh  randomSplit.hh  simpleGen.hh  specialGen.hh
test/: test_ff.cc  test_ffdBin.cc  test_ffdItem.cc  test_random_gen.cc  test_readerwriter.cc  test_simple_gen.cc  test_special_gen.cc  test_split_gen.cc
